customer-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
  labels:
    app: customer-service
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service
      version: v1
  template:
    metadata:
      labels:
        app: customer-service
        version: v1
    spec:
      containers:
        - name: customer-service
          image: customer-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
